--- a/app/src/main/res/layout/activity_book_infor.xml
+++ b/app/src/main/res/layout/activity_book_infor.xml
@@ -315,6 +315,7 @@
                 android:layout_gravity="center"
                 android:layout_width="340dp"
                 android:layout_height="40dp"
+                android:layout_marginBottom="30dp"
                 android:text="Mua ngay"
                 android:paddingStart="13dp"
                 android:textColor="@color/white"
