--- a/app/src/main/res/layout/buy_sheet.xml
+++ b/app/src/main/res/layout/buy_sheet.xml
@@ -4,6 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/lnDc"
+        android:layout_marginEnd="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+        <ImageView
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_location_on_24"/>
+        <TextView
+            android:id="@+id/txtDiaChi"
+            android:layout_marginTop="10dp"
+            android:layout_width="325dp"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"/>
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="14dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_marginTop="5dp"
@@ -30,12 +57,6 @@
                     android:text="Trưởng thành đôi khi cũng khóc"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
-                <ImageView
-                    android:id="@+id/imgBack"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_baseline_clear_24"/>
             </LinearLayout>
             <TextView
                 android:id="@+id/txtPrice"
