--- a/app/src/main/res/layout/dat_hang_sheet.xml
+++ b/app/src/main/res/layout/dat_hang_sheet.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/lnDc"
         android:layout_marginEnd="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
